Added display: none to fix z-index modal issues

--- a/src/_includes/welling-layout.html
+++ b/src/_includes/welling-layout.html
@@ -7,77 +7,85 @@
     <title>{{ site.siteTitle }}</title>
   </head>
   <body class="{{pageClass}}">
-    <div id="root">
-      <div id="container">
-        
-        <!-- Navigation and Works Modal -->
-        <div id="nav-and-works">
-          <div id="nav">
-            <div id="nav-name"><a href="/">{{ site.siteTitle }}</a></div>
-            <div id="nav-buttons">
-              <div>
-                <button type="button" id="works-button">Works</button>
-              </div>
-              <div>
-                <button type="button" id="about-button">About</button>
-              </div>
+    <div id="container">
+      <div id="nav-container">
+        <div id="nav">
+          <div id="nav-name"><a href="/">{{ site.siteTitle }}</a></div>
+          <div id="nav-buttons">
+            <div>
+              <button type="button" id="works-button">Works</button>
             </div>
-          </div>
-          <div id="nav-line"></div>
-          <div class="works-dropdown-close" id="works-dropdown">
-            <ul id="works-list">
-              {% for work in collections.works reversed %}
-              <li><a class="works-link" href="{{work.url}}">{{ work.data.title }}</a></li>
-              {% endfor %}
-            </ul>
+            <div>
+              <button type="button" id="about-button">About</button>
+            </div>
           </div>
         </div>
-        
-        <div id="main-div">
-          <main>
-            <div id="content">{{ content }}
-            <!-- these assigns are reveresed because of Eleventy's -->
-            <!-- default descending sorting... -->
-              {% assign previousPost = collections.works | getNextCollectionItem %}
-              {% if previousPost %}
-              <a class="arrow-left hide" href="{{ previousPost.url }}">
-                  <svg width="32px" height="29px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <path d="M30.79785,14.5 L1.608435,14.5"></path>
-                    <polyline points="17 1 31 14.5 17 28"></polyline>
-                  </svg>
-              </a>
-              {% endif %}
-              
-              {% assign nextPost = collections.works | getPreviousCollectionItem %}
-              {% if nextPost %}
-              <a href="{{ nextPost.url }}">
-                <div class="arrow-right hide">
-                  <svg width="32px" height="29px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <path d="M30.79785,14.5 L1.608435,14.5"></path>
-                    <polyline points="17 1 31 14.5 17 28"></polyline>
-                  </svg>
-                </div>
-              </a>
-              {% endif %}
-            </div>
-            
-            <div class="main-line hide"></div>
-            
-            <div id="picture-div">
-              {% for filename in images %}
-              <figure>
-                
-                <picture><img src="{{ filename }}"></picture>
-              
-              {% if landing-caption %}
-              <figcaption>{{ landing-caption }}</figcaption>
-              {% endif %}
-              </figure> 
-              {% endfor %}
-            </div>
-          </main>
+        <div id="works-dropdown" class="close hide">
+          <ul id="works-list">
+            {% for work in collections.works reversed %}
+            <li>
+              <a class="works-link" href="{{work.url}}"
+                >{{ work.data.title }}</a
+              >
+            </li>
+            {% endfor %}
+          </ul>
         </div>
       </div>
+
+      <div id="content">
+        {{ content }}
+        <!-- These assigns are reversed because of Eleventy's -->
+        <!-- default descending sorting... -->
+        {% assign previousPost = collections.works | getNextCollectionItem %} {%
+        if previousPost %}
+        <a class="arrow-left hide" href="{{ previousPost.url }}">
+          <svg
+            width="32px"
+            height="29px"
+            viewBox="0 0 32 29"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <path d="M30.79785,14.5 L1.608435,14.5"></path>
+            <polyline points="17 1 31 14.5 17 28"></polyline>
+          </svg>
+        </a>
+        {% endif %} {% assign nextPost = collections.works |
+        getPreviousCollectionItem %} {% if nextPost %}
+        <a href="{{ nextPost.url }}">
+          <div class="arrow-right hide">
+            <svg
+              width="32px"
+              height="29px"
+              viewBox="0 0 32 29"
+              version="1.1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <path d="M30.79785,14.5 L1.608435,14.5"></path>
+              <polyline points="17 1 31 14.5 17 28"></polyline>
+            </svg>
+          </div>
+        </a>
+        {% endif %}
+
+        <div class="content-line hide"></div>
+
+        <div id="picture-div">
+          {% for filename in images %}
+          <figure>
+            <picture><img src="{{ filename }}" /></picture>
+
+            {% if landing-caption %}
+            <figcaption>{{ landing-caption }}</figcaption>
+            {% endif %}
+          </figure>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
