--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,19 +25,36 @@ h3 {
   font-weight: normal;
 }
 
-#nav-and-works {
+#container {
+  padding: 0 5% 0 5%;
+}
+
+#nav-container {
   position: fixed;
   width: 100%;
   top: 0px;
   left: 0px;
+  z-index: 2;
 }
 
 #nav {
   display: flex;
   position: relative;
+  width: 100%;
   justify-content: space-between;
   padding: 1rem 5%;
   background-color: white;
+}
+
+#nav::after {
+  content: "";
+  position: absolute;
+  left: 5%;
+  bottom: 0px;
+  display: block;
+  width: 90%;
+  height: 1px;
+  background: black;
   z-index: 2;
 }
 
@@ -47,14 +64,6 @@ h3 {
 
 #nav-buttons {
   display: flex;
-}
-
-#nav-line {
-  position: relative;
-  height: 1px;
-  background-color: black;
-  margin: 0 5%;
-  z-index: 2;
 }
 
 #works-button {
@@ -73,7 +82,7 @@ h3 {
   background: none;
   border: 0px;
   font: inherit;
-  padding: 0 0 0 20px;
+  padding: 0 0 0 40px;
   cursor: pointer;
 }
 
@@ -81,19 +90,57 @@ h3 {
   color: grey;
 }
 
-#main-div {
-  padding: 4rem 5% 0 5%;
+ul {
+  list-style: none;
+  font-size: 1rem;
+  line-height: 1.6rem;
+  margin: 0;
+  padding: 1rem 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  border-bottom: 1px solid black;
+}
+
+#works-dropdown {
+  position: relative;
+  padding: 0 5% 0 5%;
+  width: auto;
+  background: white;
+  transition: all 0.25s;
+  z-index: 1;
+}
+
+#works-dropdown.open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+#works-dropdown.close {
+  transform: translateY(-5px);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  z-index: -1;
 }
 
 #content {
   font-size: 1.1rem;
-  padding-bottom: 2rem;
+  padding-top: 4rem;
   position: relative;
+  z-index: 1;
+  animation: fadeIn 0.75s;
 }
 
-.main-line {
+#content h3,
+#content p {
+  padding-right: 6rem;
+}
+
+.content-line {
   height: 1px;
   background-color: black;
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
@@ -102,7 +149,7 @@ h3 {
   stroke-width: 1;
   transform: rotate(-180deg);
   stroke: black;
-  top: -5px;
+  top: 70px;
   right: 40px;
   position: absolute;
 }
@@ -111,7 +158,7 @@ h3 {
   fill: none;
   stroke-width: 1;
   stroke: black;
-  top: 0px;
+  top: 75px;
   right: 0px;
   position: absolute;
 }
@@ -124,11 +171,6 @@ img {
   position: relative;
 }
 
-.move-to-back {
-  z-index: -1;
-  transition: all 0.25s;
-}
-
 .hide {
   display: none;
 }
@@ -136,7 +178,7 @@ img {
 figure {
   padding: 0 0 2rem 0;
   margin: 0;
-  animation: fadeIn 1s;
+  /* animation: fadeIn 1s; */
 }
 
 @keyframes fadeIn {
@@ -151,36 +193,4 @@ figure {
 figcaption {
   font-size: 0.75rem;
   text-transform: uppercase;
-}
-
-ul {
-  list-style: none;
-  font-size: 1rem;
-  line-height: 1.6rem;
-  margin: 0;
-  padding: 1rem 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  border-bottom: 1px solid black;
-}
-
-.works-dropdown-open {
-  position: relative;
-  padding: 0 5%;
-  width: auto;
-  background: white;
-  opacity: 1;
-  visibility: visible;
-  transition: all 0.25s;
-}
-
-.works-dropdown-close {
-  position: relative;
-  padding: 0 5%;
-  width: auto;
-  background: white;
-  opacity: 0;
-  transform: translateY(-5px);
-  visibility: hidden;
-  transition: all 0.25s;
 }
