--- a/src/_includes/about-layout.html
+++ b/src/_includes/about-layout.html
@@ -46,7 +46,13 @@
 
         <div class="content-line"></div>
 
-        <div style="display: flex; justify-content: space-evenly">
+        <div
+          style="
+            display: flex;
+            justify-content: space-evenly;
+            margin-bottom: 50px;
+          "
+        >
           <a href="mailto:eleanor.king@gmail.com">Email</a>
           <a href="https://www.instagram.com/darlakitty/" target="_blank"
             >Instagram</a
