--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@ body {
   margin: 0px;
   padding: 0px;
   border: 0px;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1.25rem;
 }
 
